2010-09-12 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKInterface.h
	* Source/DKInterface.m:
	Add -installProperties method.
	* Source/DKIntrospectionParserDelegate.m: Enable parsing
	properties.
	* Source/DKProperty.h: Fix typo and rename method.
	* Source/DKProperty.m: Implement -copyWithZone:
	* Source/DKPropertyMethod.m: Fix selector string for setters.
	* Source/DKProxy.m: Trigger generation of property methods

	Enabled property support. Getters are already working, setters
	not so much.

2010-09-12 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKIntrospectionParserDelegate.m: Fix (benign) dead store.
	* Source/DKArgument.m
	* Source/DKEndpoint.m
	* Source/DKProxy.m
	* Source/DKSignal:
	Fix memory leaks.

	Fix bugs found by the clang static analyzer.

2010-09-11 Niels Grewe <niels.grewe@halbordnung.de>
	* GNUmakefile: Add DKProperty.m and DKPropertyMethod.m to the
	build.
	* Source/DKArgument.h: Tiny documentation clarification.
	* Source/DKMethod.h: Expose some methods needed by the
	subclasses.
	* Source/DKMethod.m: Introduce a slightly more flexible way of
	comparing D-Bus and Obj-C method signatures. 
	* Source/DKProperty.h: Remove redundant attribute field.
	* Source/DKProperty.m: Implement DKProperty to hold
	introspection data about properties.
	* Source/DKPropertyMethod.h: Complete header.
	* Source/DKPropertyMethod.m: Slight cleanup for the accessor,
	implement the mutator method.

	Even more work on properties.

2010-09-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Fix typo. Protect against potential
	memory leak when unmarshalling a variant type argument raises an
	exception.
	* Source/DKProperty.h: Changes to the class layout, added some
	method declarations.
	* Source/DKPropertyMethod.h
	* Source/DKPropertyMethod.m:
	Began stubbing out support for property accessor methods.

	Further work on properties. (Not yet connected to the build)

2010-09-11 Niels Grewe <niels.grewe@halbordnung.de>
